--- a/client/src/index.css
+++ b/client/src/index.css
@@ -127,14 +127,19 @@ textarea::placeholder {
 .chat-container {
   display: flex;
   width: 100%;
-  background: red;
   gap: 1rem;
+}
+
+.chat-stream {
+  min-width: 555px;
 }
 
 .chat-drawer {
   display: flex;
-  justify-content: center;
-  min-width: 20rem;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 300px;
   width: 100%;
 }
 
